# django-no-username

./: README.md  manage.py  pyproject.toml
accounts/: admin.py  forms.py  managers.py  models.py
accounts/migrations/: 0001_initial.py
no_username/: asgi.py  settings.py  urls.py  wsgi.py
